Spacing changes, fixing education

--- a/public_html/resume.css
+++ b/public_html/resume.css
@@ -12,10 +12,13 @@ div.work_item{
    padding: 0 0 10px 0;
 }
 
+div.resume_list{
+   padding-top: 10px;
+}
+
 ul.resume_list{
    margin: 0 0 0 0;
    padding-left: 1em;
-   padding-top: 15px;
    list-style-type: circle;
 }
 
@@ -27,7 +30,7 @@ span.resume_where{
 }
 
 div.resume_when{
-   padding: 0px 0px 15px 0px;
+   padding: 0px 0px 0px 0px;
 }
 
 div.resume_summary{
@@ -47,4 +50,5 @@ div.resume{
     width: 100%;
     height: 100%;
     margin: 0 auto;    
+    padding-top: 15px;
 }
